--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Stored in GitHub secrets
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Stored in GitHub secrets
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_REGION }}  # The AWS region you are using for Elastic Beanstalk (e.g., us-east-1)
+          aws-region: us-east-1  # The AWS region you are using for Elastic Beanstalk (e.g., us-east-1)
          
       # Step 5: Install the Elastic Beanstalk CLI (EB CLI)
       - name: Install EB CLI
